test/functionCallEval2.slq

def f(): !â„• â‡’ measure(H(0:B)) as !â„•;
def main(): ğ”¹^1 {
	x := (42:uint[6]) as ğ”¹^6;
	return x[f()..f()+1]; /// error
}
